# NAA

./: README.md
contextretrieval/: EndToEnd.ipynb  eli5_formatting.ipynb  readme.md  wizard_of_wikipedia_formatting.ipynb
contextretrieval/bi-encoder/: bi-encoder_eval.ipynb  bi-encoder_tuning.ipynb  compute_embeddings.ipynb  data_splits.ipynb
contextretrieval/cross-encoder/: cross-encoder_tuning.ipynb  eli5_splits.ipynb  reranking_evaluator.ipynb  wow_splits.ipynb
demo/: ContextRetrieval_Demo.ipynb  EndToEnd_Eli5.ipynb  EndToEnd_Eli5_Finetune.ipynb  PassageRetrieval_Demo.ipynb  intent_classification_few_shot_demo.ipynb  intent_classification_main_demo.ipynb  readme.md  requirements.txt
intentIdentification/: README.md  requirements.txt
intentIdentification/binary_classification/: general_text_classification_with_BERT.ipynb  interactive_script_general_inform.ipynb
intentIdentification/multi_classification/: fewshot_text_classification_with_BERT.ipynb  interactive.ipynb  interactive_fewshot.ipynb  job1.sh  (+2 more)
responsegeneration/: Interact.ipynb  README.md  dist_train.sh  evaluate.py  evaluate.sh  pyproject.toml  requirements.txt  train.sh  utils.py
responsegeneration/DataLoader/: GeneralData.py  MARCOData.py  SQuADData.py  UbuntuData.py  build_ubuntu_dataset.py  dataloader.py  dataset_utils.py
responsegeneration/Evaluation/: bleu.py  bleu_score  rouge.py
responsegeneration/dataset_formatting_tokenizing/: MSMarcoFormatting.ipynb  MSMarcoFormatting_AmazonQA.ipynb  MSMarcoFormatting_WoW.ipynb  SQuADFormatting.ipynb  data_comparison.ipynb  dataset_format.ipynb
(+7 files in other folders)
